--- a/home/.config/i3/config
+++ b/home/.config/i3/config
@@ -1,5 +1,5 @@
 # i3wm Configuration
-# Victor O Alvarez - victoroalvarez@protonmail.com
+# Victor O Alvarez
 # 2021, 2022
 #
 # NOTES:
@@ -101,7 +101,6 @@ bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
 bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
 
-
 # kill focused window
 bindsym $mod+Shift+q kill
 #bindsym $mod+q kill
@@ -111,7 +110,6 @@ bindsym $mod+j focus left
 bindsym $mod+k focus down
 bindsym $mod+l focus up
 bindsym $mod+semicolon focus right
-
 
 # alternatively, you can use the cursor keys:
 bindsym $mod+Left focus left
@@ -174,7 +172,6 @@ set $ws8 "8"
 set $ws9 "9"
 set $ws10 "10"
 
-
 # switch to workspace
 bindsym $mod+1 workspace number $ws1
 bindsym $mod+2 workspace number $ws2
@@ -186,7 +183,6 @@ bindsym $mod+7 workspace number $ws7
 bindsym $mod+8 workspace number $ws8
 bindsym $mod+9 workspace number $ws9
 bindsym $mod+0 workspace number $ws10
-
 
 # move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace number $ws1
@@ -200,14 +196,12 @@ bindsym $mod+Shift+8 move container to workspace number $ws8
 bindsym $mod+Shift+9 move container to workspace number $ws9
 bindsym $mod+Shift+0 move container to workspace number $ws10
 
-
 # reload the configuration file
 bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
 bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
-
 
 # Key combinations for Lock, Shutdown and Restart. Press mod+Pause for menu. Press mod+BackSpace for lock only.
 # lock
@@ -262,7 +256,6 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
-
 # i3bar
 # start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
@@ -286,7 +279,6 @@ bar {
 	# 12px or 16px size
 	font pango:monospace 18px
 }
-
 
 # STARTUP PROGRAMS
 # Execute programs at startup
@@ -344,7 +336,6 @@ exec --no-startup-id picom -CGb -m 1.0
 # XFCE4 power manager
 #exec --no-startup-id xfce4-power-manager
 
-
 # KEYBINDS
 # Run programs and scripts by keypress
 
@@ -373,7 +364,6 @@ bindsym $mod+Shift+m exec xrandr --output eDP1 --auto
 
 # launch xampp
 #bindsym $mod+Shift+a exec /opt/lampp/lampp start
-
 
 # screen shots
 #bindsym $mod+Print exec gnome-screenshot
@@ -404,7 +394,6 @@ bindsym $mod+i exec firefox --private-window
 
 # launch Syncthing
 #bindsym $mod+Shift+s exec syncthing --browser-only
-
 
 # OLD CONFIGS
 # launch WICD without a tray for Network Management
@@ -437,4 +426,3 @@ bindsym $mod+i exec firefox --private-window
 # toggle mute
 #bindsym $mod+Shift+BackSpace exec pactl set-sink-mute @DEFAULT_SINK@ toggle
 #bindsym XF86AudioMute exec pactl set-sink-mute @DEFAULT_SINK@ toggle
-
