--- a/home/.config/i3/config
+++ b/home/.config/i3/config
@@ -106,10 +106,10 @@ bindsym $mod+Shift+q kill
 #bindsym $mod+q kill
 
 # change focus
-bindsym $mod+j focus left
-bindsym $mod+k focus down
-bindsym $mod+l focus up
-bindsym $mod+semicolon focus right
+#bindsym $mod+j focus left
+#bindsym $mod+k focus down
+#bindsym $mod+l focus up
+#bindsym $mod+semicolon focus right
 
 # alternatively, you can use the cursor keys:
 bindsym $mod+Left focus left
@@ -228,6 +228,7 @@ bindsym $mod+Shift+BackSpace mode "$mode_system"
 
 # keyboard bind for Lock
 bindsym $mod+BackSpace exec --no-startup-id $Locker
+bindsym $mod+l exec --no-startup-id $Locker
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
