--- a/home/.config/terminator/config
+++ b/home/.config/terminator/config
@@ -1,22 +1,35 @@
 [global_config]
-  title_font = Monospace 9
+  borderless = True
+  extra_styling = False
+  inactive_color_offset = 1.0
+  title_use_system_font = False
+  title_font = Monospace 12
 [keybindings]
 [profiles]
   [[default]]
-    background_darkness = 0.85
+    background_darkness = 0.8
+    background_type = transparent
+    cursor_blink = False
     cursor_color = "#aaaaaa"
-    font = Monospace 14
+    font = Monospace 12
     foreground_color = "#ffffff"
     show_titlebar = False
     scrollbar_position = hidden
     scroll_on_output = True
     palette = "#000000:#cd0000:#00cd00:#cdcd00:#0000cd:#cd00cd:#00cdcd:#faebd7:#404040:#ff0000:#00ff00:#ffff00:#0000ff:#ff00ff:#00ffff:#ffffff"
     use_system_font = False
+    bold_is_bright = True
   [[Victor]]
+    background_darkness = 0.75
+    background_type = transparent
+    cursor_blink = False
     cursor_color = "#aaaaaa"
-    font = Monospace 16
+    font = Monospace 12
+    foreground_color = "#ffffff"
     show_titlebar = False
+    palette = "#000000:#cd0000:#00cd00:#cdcd00:#0000ee:#cd00cd:#00cdcd:#e5e5e5:#7f7f7f:#ff0000:#00ff00:#ffff00:#5c5cff:#ff00ff:#00ffff:#ffffff"
     use_system_font = False
+    bold_is_bright = True
 [layouts]
   [[default]]
     [[[window0]]]
