--- a/home/.config/i3/config
+++ b/home/.config/i3/config
@@ -244,8 +244,11 @@ for_window [class="Gnome-calendar" instance="gnome-calendar"] floating enable
 # i3bar
 # start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
+# use "mode hide" & "hidden_state" to hide i3bar
 bar {
-        position bottom
+        mode hide
+	hidden_state hide
+	position bottom
         status_command i3status
         colors {
 		statusline	#FFFFFF
