--- a/home/.config/i3/config
+++ b/home/.config/i3/config
@@ -1,5 +1,5 @@
 # i3wm Configuration
-# Victor O Alvarez
+# Victor O Alvarez Torres
 # 2021, 2022
 # NOTES:
 # * All CAPS denote a section of the document
@@ -22,24 +22,18 @@
         #BLACK  #111111
         #GRAY   #AAAAAA
         #SILVER #DDDDDD
-
-# i3 CONFIG FILE
+# Victor's i3 CONFIG FILE
 # See https://i3wm.org/docs/userguide.html for a complete reference
 
 # APPEARANCE: FONTS, COLORS & BORDER
 # focused window Colors
 client.focused #0074D9 #0074D9 #FFFFFF 
-
 # font for window titles. Will also be used by the bar unless a different font is used in the bar {} block below.
 font pango:monospace 8
-
 # window Border. 1 pixel border
 for_window [class=".*"] border pixel 1
-
-#
 # for_window [class=".*"] border pixel 0
 hide_edge_borders smart
-
 # floating windows size
 floating_minimum_size 75 x 50
 floating_maximum_size 1024 x 640
@@ -47,34 +41,26 @@ floating_maximum_size 1024 x 640
 # GUI CONTROL
 # mod Key. Uses Super Key
 set $mod Mod4
-
 # start a Terminal
 #bindsym $mod+Return exec xfce4-terminal
 #bindsym $mod+Shift+Return exec gnome-terminal
 bindsym $mod+Return exec terminator
-
 # start file manager
 bindsym $mod+backslash exec pcmanfm
 bindsym $mod+Shift+backslash exec terminator -e ranger
 bindsym $mod+slash exec nautilus
-
 # switch to next workspace. Left to right
 bindsym Mod1+Tab workspace next
-
 # run dmenu (program launcher)
 # list all programs
 bindsym $mod+d exec --no-startup-id dmenu_run -fn 'DejaVu Sans Mono:regular:pixelsize=20'
-
 # list GUI programs
 bindsym $mod+Shift+d exec --no-startup-id i3-dmenu-desktop --dmenu="dmenu -fn 'DejaVu Sans Mono:regular:pixelsize=20'"
-
 # xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
 # screen before suspend. Use loginctl lock-session to lock your screen.
 exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
-
 # Mouse+$mod used to drag around floating windows
 floating_modifier $mod
-
 # use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
@@ -83,60 +69,46 @@ bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ to
 bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
 bindsym $mod+Shift+plus exec pactl set-sink-volume @DEFAULT_SINK@ 100%
 bindsym $mod+Shift+underscore exec pactl set-sink-volume @DEFAULT_SINK@ 50%
-
 # kill focused window
 bindsym $mod+Shift+q kill
-
 # change focus
 #bindsym $mod+j focus left
 #bindsym $mod+k focus down
 #bindsym $mod+l focus up
 #bindsym $mod+semicolon focus right
-
 # alternatively, you can use the cursor keys:
 bindsym $mod+Left focus left
 bindsym $mod+Down focus down
 bindsym $mod+Up focus up
 bindsym $mod+Right focus right
-
 # move focused window
 bindsym $mod+Shift+j move left
 bindsym $mod+Shift+k move down
 bindsym $mod+Shift+l move up
 bindsym $mod+Shift+semicolon move right
-
 # alternatively, you can use the cursor keys:
 bindsym $mod+Shift+Left move left
 bindsym $mod+Shift+Down move down
 bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
-
 # split in horizontal orientation
 bindsym $mod+h split h
-
 # split in vertical orientation
 bindsym $mod+v split v
-
 # enter fullscreen mode for the focused container
 bindsym $mod+f fullscreen toggle
-
 # change container layout (stacked, tabbed, toggle split)
 bindsym $mod+s layout stacking
 bindsym $mod+w layout tabbed
 bindsym $mod+e layout toggle split
-
 # toggle tiling / floating
 bindsym $mod+Shift+space floating toggle
-
 # change focus between tiling / floating windows
 bindsym $mod+space focus mode_toggle
-
 # focus the parent container
 bindsym $mod+a focus parent
-
 # focus the child container
 #bindsym $mod+d focus child
-
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
 set $ws1 "1"
@@ -149,7 +121,6 @@ set $ws7 "7"
 set $ws8 "8"
 set $ws9 "9"
 set $ws10 "10"
-
 # switch to workspace
 bindsym $mod+1 workspace number $ws1
 bindsym $mod+2 workspace number $ws2
@@ -161,7 +132,6 @@ bindsym $mod+7 workspace number $ws7
 bindsym $mod+8 workspace number $ws8
 bindsym $mod+9 workspace number $ws9
 bindsym $mod+0 workspace number $ws10
-
 # move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace number $ws1
 bindsym $mod+Shift+2 move container to workspace number $ws2
@@ -173,21 +143,16 @@ bindsym $mod+Shift+7 move container to workspace number $ws7
 bindsym $mod+Shift+8 move container to workspace number $ws8
 bindsym $mod+Shift+9 move container to workspace number $ws9
 bindsym $mod+Shift+0 move container to workspace number $ws10
-
 # reload the configuration file
 bindsym $mod+Shift+c reload
-
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
-
 # exit i3 (logs you out of your X session)
 bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
-
 # key combinations for Lock, Shutdown and Restart. Press mod+Pause for menu. Press mod+BackSpace for lock only
 # lock
 #set $Locker i3lock -c 000000 -i ~/.local/pictures/locked_black.png && sleep 1
 set $Locker i3lock -c 000000 && sleep 1
-
 # Shutdown, Restart and Lock
 set $mode_system System (l) lock, (Shift+e) logout, (s) suspend, (h) hibernate, (Shift+r) reboot, (Shift+s) shutdown
 mode "$mode_system" {
@@ -197,24 +162,19 @@ mode "$mode_system" {
     bindsym h exec --no-startup-id $Locker && systemctl hibernate, mode "default"
     bindsym Shift+r exec --no-startup-id systemctl reboot, mode "default"
     bindsym Shift+s exec --no-startup-id systemctl poweroff -i, mode "default"  
-
     # back to normal: Enter or Escape
     bindsym Return mode "default"
     bindsym Escape mode "default"
 }
-
 # keyboard bind for Shutdown, Restart and Lock
 #bindsym $mod+Pause mode "$mode_system"
 bindsym $mod+Shift+BackSpace mode "$mode_system"
-
 # keyboard bind for Lock
 bindsym $mod+BackSpace exec --no-startup-id $Locker
 bindsym $mod+l exec --no-startup-id $Locker
-
 # resize window (you can also use the mouse for that)
 mode "resize" {
         # These bindings trigger as soon as you enter the resize mode
-
         # Pressing left will shrink the window’s width.
         # Pressing right will grow the window’s width.
         # Pressing up will shrink the window’s height.
@@ -223,21 +183,17 @@ mode "resize" {
         bindsym k resize grow height 10 px or 10 ppt
         bindsym l resize shrink height 10 px or 10 ppt
         bindsym semicolon resize grow width 10 px or 10 ppt
-
         # same bindings, but for the arrow keys
         bindsym Left resize shrink width 10 px or 10 ppt
         bindsym Down resize grow height 10 px or 10 ppt
         bindsym Up resize shrink height 10 px or 10 ppt
         bindsym Right resize grow width 10 px or 10 ppt
-
         # back to normal: Enter or Escape or $mod+r
         bindsym Return mode "default"
         bindsym Escape mode "default"
         bindsym $mod+r mode "default"
 }
-
 bindsym $mod+r mode "resize"
-
 # choose screen layout
 set $mode_display Config monitor resolution - Default config (h), Arzopa (j)
 mode "$mode_display" {
@@ -248,12 +204,9 @@ mode "$mode_display" {
 
 	bindsym Escape mode "default"
 }
-
 bindsym $mod+x mode "$mode_display"
-
 # make gnome-calendar a floating window
 for_window [class="Gnome-calendar" instance="gnome-calendar"] floating enable
-
 # i3bar
 # start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
@@ -274,129 +227,53 @@ bar {
 		inactive_workspace #AAAAAA #001f3f #DDDDDD
 		urgent_workspace   #AAAAAA #FF4136 #FFFFFF
 	}
-	
 	tray_output primary
-	
 	# 12px or 16px size
 	font pango:monospace 14px
 }
 
 # STARTUP PROGRAMS
-# Execute programs at startup
-
-# set background color gray
+# Run programs at startup
+# background screen color gray
 exec hsetroot -solid "#000000"
-#exec hsetroot -solid '#4A5459'
-#exec hsetroot -solid '#39CCCC'
-#exec hsetroot -solid '#000000'
-
 # blueman Applet
-#exec --no-startup-id blueman-applet
 exec --no-startup-id blueman-tray
-
-# dropbox
-#exec --no-startup-id dropbox
-#exec "sleep 10; dropbox;"
-
 # dunst
 exec --no-startup-id dunst
-
-# set Background with feh
-#exec --no-startup-id feh --bg-scale /home/voa/Pictures/backgrounds/hidpi_jeremy-bezanger-LVek143HwJI-unsplash.jpg
-
-# execute NetworkManager applet
+# NetworkManager applet
 exec --no-startup-id nm-applet
-
-# pasystray for PulseAudio
-exec --no-startup-id pasystray
-
 # parcellite clipboard manager
 exec --no-startup-id parcellite
-
-# execute wicd tray for Network Management
-#exec --no-startup-id wicd-gtk --tray
-
-# start pcmanfm in the background
 exec --no-startup-id pcmanfm -d
-
-# run picom in the background
+# pasystray for PulseAudio
+exec --no-startup-id pasystray
+# picom in the background
 exec --no-startup-id picom -b -c
-
-# run syncthing daemon
+# syncthing daemon
 exec --no-startup-id syncthing -no-browser
 
 # KEYBINDS
 # Run programs and scripts by keypress
-
+# screen brigthness
 # increase screen brightness
 bindsym XF86MonBrightnessUp exec xbacklight -inc 5
-#bindsym $mod+Shift+plus exec xbacklight -inc 5
 # decrease brightness
 bindsym XF86MonBrightnessDown exec xbacklight -dec 5
-#bindsym $mod+Shift+minus exec xbacklight -dec 5
-
-# lock screen with i3lock
-#bindsym $mod+Shift+w exec "i3lock && sleep 5 && xset dpms force off"
-# lock screen with lightdm
-#bindsym $mod+Shift+w exec "dm-tool lock"
-
 # set default monitor. 
-#bindsym $mod+Shift+m exec xrandr --output eDP1 --auto 
 bindsym $mod+Shift+m exec ~/.screenlayout/laptop-single-screen.sh 
 bindsym $mod+Shift+p exec ~/.screenlayout/laptop-single-screen.sh 
-#&& feh --bg-scale /home/voa/Pictures/pexels-irina-iriser-1366957.jpg"
-#bindsym $mod+m exec "xrandr --output eDP1 --off"
 # run config script for monitor
 bindsym $mod+Shift+n exec ~/.screenlayout/arzopa-second-screen.sh
-
-# launch calendar
-bindsym $mod+c exec gnome-calendar
-
-# launch xampp
-#bindsym $mod+Shift+a exec /opt/lampp/lampp start
-
-# screen shots
-bindsym $mod+Print exec gnome-screenshot -i
-#bindsym Ctrl+Print exec gnome-screenshot -w
-bindsym Print exec gnome-screenshot
-
-# launch arandr
+# arandr for screen configuration
 bindsym $mod+p exec arandr
-
-# launch Google Chrome
+# calendar
+bindsym $mod+c exec gnome-calendar
+# Chrome Browser
 bindsym $mod+Shift+o exec google-chrome-stable
-
-# launch or focus FireFox
+# FireFox Browser
 bindsym $mod+o exec firefox-esr
-#bindsym $mod+o exec flatpak run org.mozilla.firefox
-#bindsym $mod+Shift+o [class="Firefox"] focus
-
-# open Private Firefox session
+# Firefox's private session
 bindsym $mod+i exec firefox --private-window
-
-# visual studio code
-#bindsym $mod+bracketleft exec code
-
-# launch Midnight Commander
-#bindsym $mod+Shift+p exec xfce4-terminal -e mc 
-
-# launch Syncthing
-#bindsym $mod+Shift+s exec syncthing-gtk
-
-# python automation
-# bindsym $mod+Shift+h exec python3 /home/voa/workspace/bullets.py
-
-# increase volume
-#bindsym $mod+Shift+plus exec pactl set-sink-volume @DEFAULT_SINK@ +10%
-#bindsym XF86AudioRaiseVolume exec pactl set-sink-volume @DEFAULT_SINK@ +10%
-
-# set volume to 100%
-#bindsym $mod+XF86AudioRaiseVolume exec pactl set-sink-volume @DEFAULT_SINK@ 100%
-
-# decrease volume
-#bindsym $mod+Shift+minus exec pactl set-sink-volume @DEFAULT_SINK@ -10%
-#bindsym XF86AudioLowerVolume exec pactl set-sink-volume @DEFAULT_SINK@ -10%
-
-# toggle mute
-#bindsym $mod+Shift+BackSpace exec pactl set-sink-mute @DEFAULT_SINK@ toggle
-#bindsym XF86AudioMute exec pactl set-sink-mute @DEFAULT_SINK@ toggle
+# screenshots
+bindsym $mod+Print exec gnome-screenshot -i
+bindsym Print exec gnome-screenshot
