Add changeVolume script from the ArchWiki, this script uses dunst to visualize volume changes. Modify the Debian install script.

--- a/home/.config/i3/config
+++ b/home/.config/i3/config
@@ -62,12 +62,18 @@ exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 floating_modifier $mod
 # use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && $refresh_i3status
+#bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
+#bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && $refresh_i3status
+bindsym XF86AudioRaiseVolume exec ~/bin/changeVolume 2dB+ unmute
+bindsym XF86AudioLowerVolume exec ~/bin/changeVolume 2dB- unmute
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
 bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
-bindsym $mod+Shift+plus exec pactl set-sink-volume @DEFAULT_SINK@ 100%
-bindsym $mod+Shift+underscore exec pactl set-sink-volume @DEFAULT_SINK@ 50%
+# increase volume with pactl
+#bindsym $mod+Shift+plus exec pactl set-sink-volume @DEFAULT_SINK@ 100%
+#bindsym $mod+Shift+underscore exec pactl set-sink-volume @DEFAULT_SINK@ 50%
+# change volume with script
+bindsym $mod+Shift+plus exec changeVolume 2dB+ unmute
+bindsym $mod+Shift+underscore exec changeVolume 2dB- unmute
 # kill focused window
 bindsym $mod+Shift+q kill
 # change focus
