--- a/home/.config/i3/config
+++ b/home/.config/i3/config
@@ -168,7 +168,7 @@ set $mode_system System (l) lock, (Shift+e) logout, (Shift+r) reboot, (Shift+s) 
 mode "$mode_system" {
     bindsym l exec --no-startup-id $Locker, mode "default"
     bindsym Shift+e exec --no-startup-id i3-msg exit, mode "default"
-    #bindsym s exec --no-startup-id $Locker && systemctl suspend, mode "default"
+    bindsym s exec --no-startup-id $Locker && systemctl suspend, mode "default"
     #bindsym h exec --no-startup-id $Locker && systemctl hibernate, mode "default"
     bindsym Shift+r exec --no-startup-id systemctl reboot, mode "default"
     bindsym Shift+s exec --no-startup-id systemctl poweroff -i, mode "default"  
@@ -205,10 +205,12 @@ mode "resize" {
 }
 bindsym $mod+r mode "resize"
 # choose screen layout
-set $mode_display Config monitor resolution - Default config (h), Dual Arzopa (j)
+set $mode_display Config Monitor Resolution - Default (h), Dual-Arzopa (j), Single-Arzopa (o), Single-Arzopa 720p (p)
 mode "$mode_display" {
 	bindsym h exec --no-startup-id sh "$HOME/.screenlayout/home.sh", mode "default"
 	bindsym j exec --no-startup-id sh "$HOME/.screenlayout/equal-resolution-arzopa.sh", mode "default"
+	bindsym o exec --no-startup-id sh "$HOME/.screenlayout/arzopa-only-1080p.sh", mode "default"
+	bindsym p exec --no-startup-id sh "$HOME/.screenlayout/arzopa-only-720p.sh", mode "default"
 	# back to normal: Enter or Escape
 	bindsym Return mode "default"
 
