--- a/home/.config/i3/config
+++ b/home/.config/i3/config
@@ -226,7 +226,7 @@ for_window [class="Gnome-calendar" instance="gnome-calendar"] floating enable
 bar {
         #mode hide
 	#hidden_state hide
-	position top
+	position bottom
         status_command i3status
         colors {
 		statusline	#FFFFFF
