--- a/home/.config/i3status/config
+++ b/home/.config/i3status/config
@@ -36,10 +36,10 @@ general {
 }
 
 #order += "ipv6"
-#order += "disk /"
 order += "wireless _first_"
 order += "ethernet _first_"
 order += "battery all"
+order += "disk /"
 #order += "load"
 order += "tztime local"
 
