--- a/home/.config/terminator/config
+++ b/home/.config/terminator/config
@@ -2,15 +2,13 @@
   borderless = True
   extra_styling = False
   inactive_color_offset = 1.0
-  title_use_system_font = False
-  title_font = Monospace 12
 [keybindings]
 [profiles]
   [[default]]
     background_darkness = 0.8
-    cursor_blink = False
-    cursor_color = "#aaaaaa"
-    font = Monospace 12
+    cursor_fg_color = "#000000"
+    cursor_bg_color = "#ffffff"
+    font = Monospace 10
     foreground_color = "#ffffff"
     show_titlebar = False
     scrollbar_position = hidden
@@ -19,18 +17,7 @@
     use_system_font = False
     bold_is_bright = True
   [[Victor]]
-    background_darkness = 0.75
-    background_type = transparent
-    cursor_blink = False
-    cursor_color = "#aaaaaa"
-    font = Monospace 12
     foreground_color = "#ffffff"
-    show_titlebar = False
-    palette = "#000000:#cd0000:#00cd00:#cdcd00:#0000ee:#cd00cd:#00cdcd:#e5e5e5:#7f7f7f:#ff0000:#00ff00:#ffff00:#5c5cff:#ff00ff:#00ffff:#ffffff"
-    use_system_font = False
-    bold_is_bright = True
-  [[New Profile]]
-    cursor_color = "#aaaaaa"
 [layouts]
   [[default]]
     [[[window0]]]
