--- a/home/.config/i3/config
+++ b/home/.config/i3/config
@@ -44,8 +44,8 @@ floating_maximum_size 1024 x 640
 set $mod Mod4
 
 # start a Terminal
-bindsym $mod+Return exec gnome-terminal
-#bindsym $mod+Return exec xfce4-terminal
+#bindsym $mod+Return exec gnome-terminal
+bindsym $mod+Return exec xfce4-terminal
 #bindsym $mod+Return exec terminator
 
 # start file manager
@@ -282,7 +282,8 @@ exec --no-startup-id pulseaudio --start
 # pasystray for PulseAudio
 exec --no-startup-id pasystray
 # picom in the background
-#exec --no-startup-id picom -b -c
+# exec --no-startup-id picom -b -c
+exec --no-startup-id picom
 # syncthing daemon
 #exec --no-startup-id syncthing -no-browser
 # start terminator at boot
